[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Main/Pages/LemonadeAndStandScene/LemonadeStandMenu/EventLocation.gd" type="Script" id=1]

[node name="StandInfoContainer" type="HBoxContainer"]
margin_top = 390.0
margin_right = 1326.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageContainer" type="VBoxContainer" parent="."]
margin_right = 661.0
margin_bottom = 378.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="ImageContainer"]
margin_right = 661.0
margin_bottom = 378.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsContainer" type="VBoxContainer" parent="."]
margin_left = 665.0
margin_right = 1326.0
margin_bottom = 378.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SettingsContainer"]
margin_right = 661.0
margin_bottom = 14.0
text = "Your Lemonade Stand"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsContainer"]
margin_top = 18.0
margin_right = 661.0
margin_bottom = 38.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="SettingsContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 157.0
margin_bottom = 17.0
text = "Today the stand is at the"

[node name="LocationDropdown" type="OptionButton" parent="SettingsContainer/HBoxContainer"]
margin_left = 167.0
margin_right = 661.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="SettingsContainer"]
margin_top = 42.0
margin_right = 661.0
margin_bottom = 56.0
text = "It can hold up to 0 gallons of lemonade."
[connection signal="item_selected" from="SettingsContainer/HBoxContainer/LocationDropdown" to="." method="_on_LocationDropdown_item_selected"]
